AC_INIT(GoIO_DLL/GoIO_DLL_interface.cpp)
AM_INIT_AUTOMAKE(GoIO_DLL,2.13.0)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL
AC_PROG_INSTALL

GIO_EXTRA_CFLAGS=-fvisibility=hidden
AC_SUBST(GIO_EXTRA_CFLAGS)

AC_OUTPUT(Makefile
	  GoIO_cpp/Makefile
	  GoIO_cpp/Linux/Makefile
	  GoIO_DLL/Makefile
	  GoIO_DLL/GoIO.pc)

